--- a/MenusToolbar/app/src/main/res/layout/activity_main.xml
+++ b/MenusToolbar/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.sebastian.toolbarejemplo.MainActivity">
-
+    tools:context="com.kmmx.menustoolbar.MainActivity">
 
     <include layout="@layout/toolbar" />
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp">
@@ -20,21 +20,22 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <include layout="@layout/toolbar" android:id="@+id/toolbarCard"/>
+            <include
+                android:id="@+id/toolbarCard"
+                layout="@layout/toolbar" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:text="@string/app_name"
-                android:textSize="24sp"/>
+                android:textSize="24sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:text="@string/app_name"/>
-
+                android:text="@string/hello_card" />
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
@@ -42,29 +43,30 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:layout_margin="20dp">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbarExtend"
+            android:id="@+id/toolbarExtended"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:text="@string/app_name"
-                    android:textSize="24sp"/>
+                    android:text="Hello"
+                    android:textSize="24sp" />
 
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Ingresa tu nobre"/>
+                    android:text="Hello" />
 
             </LinearLayout>
 
